--- a/sass/_media.scss
+++ b/sass/_media.scss
@@ -24,7 +24,8 @@
 
   .categories {
     flex: 538px 0 1;
-    margin: 0 10% 0 1em;
+    margin: 0 1em;
+    transition: all ease 300ms;
   }
 
   #related_posts {
@@ -90,7 +91,7 @@
     justify-content: space-between;
     flex-wrap: wrap;
     width: 96%;
-    margin: 0 auto 2em;
+    margin: 1em auto 2em;
   }
   .menu-home {
     order: 1;
@@ -100,9 +101,11 @@
     padding-top: 1em;
     display: block;
   }
+  // drops underneath
   .categories {
     order: 3;
     flex: 1024px 0 1;
+    margin-right: 1.5em;
   }
   .menu-home,
   .categories,
