--- a/sass/_menu.scss
+++ b/sass/_menu.scss
@@ -64,12 +64,6 @@
     }
   }
 
-  .categories {
-    flex: 538px 0 1;
-    margin: 0 1em;
-    transition: all ease 300ms;
-  }
-
   #menu-main-menu {
     display: flex;
     justify-content: space-between;
